--- a/style.css
+++ b/style.css
@@ -27,4 +27,11 @@ body {
   padding: 10px;
   background: rgba(0,0,0,0.5);
   border-radius: 8px;
+  #title {
+  text-align: center;
+  color: white;
+  margin-top: 20px;
+  font-size: 32px;
+  text-shadow: 0 0 10px rgba(0,0,0,0.6);
 }
+
